<resources>
    <string name="app_name">Agro App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Action">Available Products</string>
    <string name="Comedy">Profile</string>
    <string name="Drama">Agric News</string>
    <string name="user_name">spot@catchat.com</string>
    <string name="imagedescription">imagedescription</string>
    <string name="name_of_current_genre">Name of Current genre</string>
    <string name="genres_name">Genres name</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="display_picture">display picture</string>
    <string name="textview">TextView</string>
    <string name="imageview">imageview</string>
    <string name="story_line">Story line</string>
    <string name="completestory">completestory</string>
    <string name="download">Download</string>
    <string name="movietitle">movietitle</string>
    <string name="release_date">release date</string>
    <string name="todo">TODO</string>
    <string name="hi_you_dey_wine">chat</string>
    <string name="Orders">Orders</string>
    <string name="Invest">Invest In Farms</string>
    <string name="Chat">Chat</string>

    <string-array name="roles">
        <item>Farmer</item>
        <item>Consumer</item>
    </string-array>


    <string-array name="local">
        <item>Ijebu Ode</item>
        <item>Abeokuta</item>
    </string-array>
    <string-array name="states">
        <item>ibadan</item>
        <item>Ogun</item>
    </string-array>


    <string-array name="farming">
        <item>Poultry</item>
        <item>Goat Rearing</item>
        <item>Cassava Planting</item>
    </string-array>

</resources>