<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showin="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_action"
            android:checked="true"
            android:icon="@drawable/chatboxcorners"
            android:title="@string/Action" />

        <item
            android:id="@+id/nav_com"
            android:icon="@drawable/chatboxcorners"
            android:title="@string/Comedy" />

        <item
            android:id="@+id/nav_drama"
            android:icon="@drawable/chatboxcorners"
            android:title="@string/Drama" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chatboxcorners"
            android:title="@string/Chat" />

        <item
            android:id="@+id/nav_invest"
            android:icon="@drawable/chatboxcorners"
            android:title="@string/Invest" />
    </group>
</menu>